--- a/Website.html
+++ b/Website.html
@@ -1,54 +1,92 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Curriculum Vitae</title>
-        <link rel="stylesheet" href="style.css">
+        <title>My Website</title>
     </head>
-    <body>
-        <div id="nav">
-            <div id="nav_title">
-                <p1> <p><b>Curriculum Vitae</b></p></p1>
-            </div>
-            <ul>
-                <li><a href="content-home.html">Beranda</a></li>
-                <li><a href="content-profiles.html">Profiles</a></li>
-                <li><a href="content-skill.html">Skill</a></li>
-                <li><a href="content-rp.html">Riwayat Pendidikan</a></li>
-                <li><a href="content-ro.html">Riwayat Organisasi</a></li>
-            </ul>
-
-        </div>
-        <div id="side_bar">
-            <br>
-            <div>
-                <img src="profiles_img.jpg" alt="foto_profil">
-            </div>
-            <div> 
-                <h2>Aditya Wahyu Ramadhan</h2>
-            </div>
-            <div>
-                <fieldset>
-                    <h3>Contact</h3>
-                    <ul>
-                        <li><img src="teleponLogo.png" alt="">  Telepon     : +6287848328383</li>
-                        <li><img src="emailLogo.png" alt="">    Email       : awahyu148@gmail.com</li>
-                        <li><img src="Instagram.jpg" alt="">    Instgram    : @adityawr388</li>
-                        <li><img src="facebookLogo.png" alt=""> Facebook    : aditya148</li>
-                    </ul>           
-                </fieldset>
-            </div>
-        </div>
-        <div id="content">
-            <h1>About Me</h1>
-            <p>Seorang Mahasiswa Prodi Pendidikan Teknik Informatika dan KomputeR, Fakultas Keguruan dan Ilmu
-                Pendidikan. Memiliki Kepribadian yang Santai dan Berjiwa Sosial yang Tinggi. Motto Hidup
-                yang dimiliki adalah " Selalu Berusaha menjadi Orang yang Lebih Baik". <br>
-                Berkemauan untuk Sukses, Disiplin dalam Waktu, dan mau Bekerja Keras.
-            </p>
-        </div>
-        <div id="footer">
-            <h2>Thanks for Watching</h2>
-        </div>
-
+    <body background="sakura2.jpg">
+        <link rel="stylesheet" href="">
+        <img src="sakura1.png" alt="nature">
+        <ul style="width: 100%; overflow: hidden;
+            background-color: black;
+            padding: 0;
+            margin: 0;
+            list-style-type: none;
+            width: 100%;">
+            <li style="float: left;"><a href="#Halamanutama" style="color: blanchedalmond;display: inline-block;text-align: center;padding: 10px ;text-decoration: none;"
+                >Halaman Utama</a></li>
+            <li style="float: left;"><a href="#artikel" style="color: blanchedalmond;display: inline-block;text-align: center;padding: 10px ;text-decoration: none;"
+                >Artikel</a></li>
+            <li style="float: left;"><a href="#about" style="color: blanchedalmond;display: inline-block;text-align: center;padding: 10px ;text-decoration: none;"
+                >About</a></li>
+        </ul>
+        <table style="width: 100%;">
+            <tr>
+                <td colspan="1" style="background-color:lavender; width: 70%; height: 500px; overflow: scroll;">
+                    <font face="Calibri" color="black" >
+                        <h3><center><b>Artikel Budaya</b></center></h3>
+                        <h2>Isi Web</h2>
+                    </font>
+                </td>
+                <td background="sakura2.jpg" colspan="1" style="background-color: black; width: 30%; height: 500px;">
+                    <table>
+                        <tr>
+                            <fieldset>
+                                <h3>Daftar Artikel</h3>
+                                <ul>
+                                    <li><a href="#artikel_budaya">Artikel Budaya</a></li>
+                                    <li><a href="#artikel_sejarah">Artikel Sejarah</a></li>
+                                    <li><a href="#artikel_sosial">Artikel Sosial</a></li>
+                                    <li><a href="#artikel_psokologi">Artikel Psikologi</a></li>
+                                    <li><a href="#artikel_astronomi">Artikel Astronomi</a></li>
+                                </ul>
+                            </fieldset>
+                            <br>
+                            <fieldset style="background-color: rgb(90, 54, 68);">
+                                <font face="arial"><center><b>Beri Kami Saran</b></center></font><br>
+                                <center>
+                                    <textarea name="saran" cols="30" rows="7"></textarea><br>
+                                    <input type="submit" name="submit" value="Send">
+                                </center>
+                            </fieldset>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" style="background-color:rgb(0, 0, 0); height: 150px; ">
+                    <fieldset style="padding: 30px;">
+                        <table cellspacing="0">
+                            <tr>
+                                <td>
+                                    <img src="bio.png" alt="profil" style="width: 90px; height: 90px; float: left;">
+                                </td>
+                                <td>
+                                    <p style="color: white;">
+                                        <b>Biodata Penulis</b><br>
+                                        Nama        : Aditya Wahyu Ramadhan <br>
+                                        Email       : adityawr@gmail.com <br>
+                                        Alamat      : Tasikmadu, Karanganyar, Jawa Tengah <br>
+                                    </p>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                   <fieldset style="width: 300px;">
+                                    <h3 style="color: white;">Kolom Komentar</h3>
+                                    <h5 style="color: white;">Pengirim : </h5>
+                                    <input type="text" name="sender" placeholder="sender_name@email.com" style="width: 255px;"><br>
+                                    <textarea name="komentar" cols="30" rows="2" placeholder="isi komentar.."></textarea><br>
+                                    <input type="submit" name="submit" value="Upload">
+                                    <h5 style="color: white;">Komentar Publik :</h5>
+                                   </fieldset>
+                                </td>
+                            </tr>
+                        </table>
+                        
+                        
+                    </fieldset>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
